# lerobot_custom

./: .gitignore  install.sh
cosmos-reason2/: .gitignore  .pre-commit-config-base.yaml  .pre-commit-config.yaml  README.md  pyrefly.toml  ruff.toml
cosmos-reason2/assets/: .gitignore
cosmos-reason2/configs/: cosmos_rl_config.toml  inference_config.yaml
cosmos-reason2/cosmos_reason2_utils/: README.md
cosmos-reason2/cosmos_reason2_utils/cosmos_reason2_utils/: init.py  text.py  vision.py  vision_test.py
cosmos-reason2/cosmos_reason2_utils/cosmos_reason2_utils/script/: inference.py
cosmos-reason2/docker/: entrypoint.sh
cosmos-reason2/docs/: llmcompressor.md
cosmos-reason2/examples/cosmos_rl/: README.md
cosmos-reason2/examples/cosmos_rl/scripts/: hf_sft.py
cosmos-reason2/examples/notebooks/: README.md  trl_grpo.ipynb  trl_sft.ipynb  trl_sft.py
cosmos-reason2/prompts/: 2d_grounding.yaml  README.md  av_cot.yaml  causal.yaml  causal_vqa.yaml  describe_anything.yaml  embodied_reasoning.yaml  mvp_bench.yaml  robot_cot.yaml  temporal_localization.yaml
experiments/: profile_action_chunk_size.py  profile_action_expert_dim.py  run_success_rate_comparison.py  test_rtc_combinations.py
experiments/Disjoint_SM_L2_DRAM_contention_test/: .gitignore  CMakeLists.txt  README.md  run_compute_under_memory_pressure_sweep.py  run_duration_matched_sweep.py  run_size_sweep.sh
experiments/Disjoint_SM_L2_DRAM_contention_test/src/: kernels.cuh  main.cu
experiments/Disjoint_SM_L2_DRAM_contention_test/tools/: nsys_overlap.py  plot.py  plot_compute_under_memory_pressure.py  plot_duration_matched.py  plot_size_sweep.py
experiments/GEMV_GEMM_contention_test/: .gitignore  CMakeLists.txt  README.md  plot_size_sweep.py  run_size_sweep.sh
experiments/GEMV_GEMM_contention_test/src/: kernels.cuh  main.cu
experiments/GEMV_GEMM_contention_test_orin_libsmctrl/: CMakeLists.txt  README.md  results.csv  results_smoke.csv  run_size_sweep.sh
experiments/GEMV_GEMM_contention_test_orin_libsmctrl/size_sweep_results/: case1_fixed_gemv_vary_gemm.csv  case2_fixed_gemm_vary_gemv.csv
experiments/GEMV_GEMM_contention_test_orin_libsmctrl/size_sweep_smoke/: case1_fixed_gemv_vary_gemm.csv  case2_fixed_gemm_vary_gemv.csv
experiments/GEMV_GEMM_contention_test_orin_libsmctrl/src/: kernels.cuh  main.cu
experiments/GEMV_GEMM_contention_test_orin_libsmctrl/tools/: plot.py
experiments/TSGEMM_roofline_orin_libsmctrl/: CMakeLists.txt  README.md  plot_n_sweep.py  plot_roofline_by_sm.py  plot_row_sweep.py  plot_wide_ai_sweep.py  run_n_sweep.sh  run_row_sweep.sh  run_wide_ai_sweep.sh
experiments/TSGEMM_roofline_orin_libsmctrl/n_sweep_results/: n_1024.csv  n_128.csv  n_16.csv  n_256.csv  n_32.csv  n_512.csv  n_64.csv  summary.csv
experiments/TSGEMM_roofline_orin_libsmctrl/src/: kernels.cuh  main.cu
experiments/TSGEMM_roofline_orin_libsmctrl/tools/: plot.py
experiments/TSGEMM_roofline_orin_libsmctrl/wide_ai_sweep_results/: shape_1024.csv  shape_128.csv  shape_16.csv  shape_2048.csv  shape_256.csv  shape_3072.csv  shape_32.csv  shape_512.csv  shape_64.csv  summary.csv
experiments/compute_mem_contention_test/: .gitignore  CMakeLists.txt  README.md
experiments/compute_mem_contention_test/src/: kernels.cuh  main.cu
experiments/compute_mem_contention_test/tools/: plot.py
experiments/rtc_sweep_results/: rtc_combinations_results.csv
experiments/simple_sm_util_block_size/: CMakeLists.txt
experiments/simple_sm_util_block_size/src/: green_context_utils.cu  kernels.cuh
experiments/simple_sm_util_greencontext/: CMakeLists.txt  README.md
experiments/simple_sm_util_greencontext/src/: green_context_utils.cu  green_context_utils.h  kernels.cuh  main.cu
experiments/simple_sm_util_greencontext/tools/: plot.py
experiments/simple_sm_util_greencontext_tma/: .gitignore  README.md
experiments/simple_sm_util_greencontext_tma/docs/: green_context_reference.md
experiments/simple_sm_util_greencontext_tma/src/: kernels.cuh  main.cu
experiments/simple_sm_util_greencontext_tma/tools/: plot.py
experiments/simple_sm_util_libsmctrl/: .gitignore  BUILD_STATUS.md  CMakeLists.txt  LIBSMCTRL_REFERENCE.md  README.md  build.sh
experiments/simple_sm_util_libsmctrl/src/: kernels.cuh  main.cu
experiments/simple_sm_util_libsmctrl/tools/: plot.py
experiments/simple_sm_util_test/: GREEN_CONTEXT_CHANGES.md  README.md  green_context_runtime_api_example.cu
experiments/simple_sm_util_test/src/: green_context_utils.h  main.cu
experiments/vla_llm_overlap_libsmctrl/: .gitignore  README.md  build.sh  libsmctrl_extension.py  overlap_experiment.py
experiments/vla_llm_overlap_libsmctrl/csrc/: smctrl_pybind.cpp
experiments/vla_llm_overlap_libsmctrl/scripts/: run_smoke.sh
profile/: profile_action_expert_dim.py
real-time-chunking-kinetix/: plot_results.py
real-time-chunking-kinetix/src/: model.py  train_flow.py
src/lerobot/policies/pi05/: configuration_pi05.py  modeling_pi05.py
src/lerobot/scripts/: lerobot_eval.py
